[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "market-data-models"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastavro>=1.9",
    "pyarrow>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pandas>=2.0",
]

[tool.pytest.ini_options]
markers = ["unit: fast unit tests (no external services required)"]
testpaths = ["tests"]
